--- a/src/views/single_room.ejs
+++ b/src/views/single_room.ejs
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <link href="public/stylesheets/single_room.css" rel="stylesheet" />
-    <link href="public/stylesheets/general.css" rel="stylesheet" />
+    <link href="stylesheets/single_room.css" rel="stylesheet" />
+    <link href="stylesheets/general.css" rel="stylesheet" />
 </head>
 
 <body>
