Added extra structure and missing info to rooms page. Added room creation form. Added room invites list

--- a/src/public/stylesheets/discover.css
+++ b/src/public/stylesheets/discover.css
@@ -38,7 +38,7 @@ ul.discover_lineup {
     padding: 20px;
 }
 
-li.discover_item {
+.discover_item {
     background-color: #f0f0f0;
     border-radius: 5px;
     width: 200px;
@@ -46,17 +46,17 @@ li.discover_item {
     overflow: hidden;
 }
 
-li.discover_item a {
+.discover_item a {
     text-decoration: none;
 }
 
-li.discover_item img {
+.discover_item img {
     width: 100%;
     height: 250px;
     object-fit: cover;
 }
 
-li.discover_item h1 {
+.discover_item h1 {
     font-size: 1.4em;
     text-align: center;
     margin: 5px 0px;
@@ -64,7 +64,25 @@ li.discover_item h1 {
 
 /* On Hover */
 
-li.discover_item:hover {
+.discover_item:hover {
     transform: scale(1.05) !important;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 15px 45px;
+}
+
+/* ===== Rooms Lineup ===== */
+
+#rooms .discover_lineup li {
+    height: 200px;
+    width: 200px;
+}
+
+#rooms .discover_item {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+#rooms .discover_item img {
+    object-fit: scale-down;
 }
