--- a/src/public/stylesheets/footer.css
+++ b/src/public/stylesheets/footer.css
@@ -3,18 +3,15 @@
     margin: 0px;
     padding: 0px;
 }
-#chat {
+#chat_aside {
     
     width: 60px;
     height: 60px;
     right: 0px;
     bottom: 15%;
-    right: 3%;
-    position: absolute;
-
-   
-
+    right: 3%;  
 }
+
 footer {
     align-items: center;
     background-image: linear-gradient(to left, #a9b7d2 , white); 
