--- a/src/views/rooms.ejs
+++ b/src/views/rooms.ejs
@@ -1,36 +1,34 @@
-<% let my_rooms = [{"title": "Room1" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room1" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room1" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },] %>
+<% let my_rooms = [{"title": "Room11111111111111111111111111111111111111111111111111" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room1" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room1" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },] %>
 <% let other_rooms = [{"title": "Chat 1" , "img" : "/images/chat.png" }, {"title": "Chat 2" , "img" : "/images/chat.png" }, {"title": "Chat 3" , "img" : "/images/chat.png" }] %>
 <% user = { invites: [{name:'room0'},{name:'room00'},{name:'room000'}] } %>
 
 <section id="rooms">
 
     <div id="top">
-        <!-- pubblic rooms -->
-    <article class="my_rooms" id="general">
+        <!-- my rooms -->
+    <article class="rooms_area" id="my_rooms">
         <h1>Your Rooms</h1>
         <p>Every room you have joined, or created.</p>
-        <ul class="discover_lineup rooms">
+        <ul class="discover_lineup">
               
             <% my_rooms.forEach( item => { %>
                 <li>
-                    <div class="discover_item grow_hover shadow">
-                        <a href="/item/info">
-                            <img src="<%= item.img %>" alt="<%= item.title %>">
-                            <h1><%= item.title %></h1>
-                        </a>
-                    </div>
-                    <button>Leave</button>
+                    <a class="discover_item grow_hover shadow" href="/item/info">
+                        <img src="<%= item.img %>" alt="<%= item.title %>">
+                        <h1 class="room_title"><%= item.title %></h1>
+                    </a>
+                    <button class="button room_btn">Leave</button>
                 </li>
             <% }) %>
     
         </ul>
       </article>
   
-      <!-- private rooms -->
-      <article class="explore_rooms" id="general">
+      <!-- other rooms -->
+      <article class="rooms_area" id="other_rooms">
           <h1>Explore Rooms</h1>
           <p>Meet others with the same interests as you, and keep up to date on recent news.</p>
-          <ul class="discover_lineup rooms">
+          <ul class="discover_lineup">
               
             <% other_rooms.forEach( item => { %>
                 <li>
@@ -40,7 +38,7 @@
                             <h1><%= item.title %></h1>
                         </a>
                     </div>
-                    <button>Ask to Join</button>
+                    <button class="button room_btn">Ask to Join</button>
                 </li>
             <% }) %>
     
