--- a/src/public/stylesheets/discover.css
+++ b/src/public/stylesheets/discover.css
@@ -71,6 +71,37 @@ ul.discover_lineup {
 
 /* ===== Rooms Lineup ===== */
 
+#rooms #top {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.rooms_area {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 20px;
+}
+
+.rooms_area .room_lineup_info {
+    letter-spacing: 0.5px;
+}
+
+.room_lineup_info h1 {
+    font-size: 24px;
+}
+
+.room_lineup_info p {
+    font-size: 18px;
+}
+
+#rooms .discover_lineup {
+    width: 100%;
+    height: 330px;
+    overflow-y: scroll;
+}
+
 #rooms .discover_lineup li {
     display: flex;
     flex-direction: column;
@@ -78,7 +109,7 @@ ul.discover_lineup {
 }
 
 #rooms .discover_lineup .room_btn {
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 #rooms .discover_item {
