--- a/src/public/stylesheets/discover.css
+++ b/src/public/stylesheets/discover.css
@@ -132,3 +132,65 @@ ul.discover_lineup {
     text-overflow: ellipsis;
     margin: 0px 10px 10px 10px;
 }
+
+/* Bottom Area */
+#rooms #bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#rooms #user_invites {
+    min-width: 400px;
+    max-height: 650px;
+    height: fit-content;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 25px 0px;
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
+#rooms #user_invites .no_invites {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+#user_invites ul {
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+    
+}
+
+#user_invites .room_invite {
+    background-color: rgb(240, 240, 240);
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    height: 65px;
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 6px 6px;
+}
+
+#user_invites .room_invite .room_name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#user_invites .room_invite button {
+    background-color: var(--lightpink);
+    color: var(--black);
+    margin-left: auto;
+}
+
+#user_invites .room_invite img {
+    height: 100%;
+}
