--- a/src/views/rooms.ejs
+++ b/src/views/rooms.ejs
@@ -1,6 +1,8 @@
-<% let my_rooms = [{"title": "Room11111111111111111111111111111111111111111111111111" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room1" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room1" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },] %>
+<% let my_rooms = [{"title": "Room11111111111111111111111111111111111111111111111111" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room1" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room1" , "img" : "/images/chat.png" }, {"title": "Room2" , "img" : "/images/chat.png" }, {"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room3" , "img" : "/images/chat.png" },{"title": "Room3" , "img" : "/images/chat.png" },] %>
 <% let other_rooms = [{"title": "Chat 1" , "img" : "/images/chat.png" }, {"title": "Chat 2" , "img" : "/images/chat.png" }, {"title": "Chat 3" , "img" : "/images/chat.png" }] %>
-<% user = { invites: [{name:'room0'},{name:'room00'},{name:'room000'}] } %>
+<% user = { invites: other_rooms } %>
+<% user1 = { invites: [] } %>
+<% user1 = { invites: my_rooms } %>
 
 <section id="rooms">
 
@@ -51,16 +53,23 @@
 
     <div id="bottom">
 
-        <section class="invites">
-            <ul>
-                <% user.invites.forEach(invite => { %>
-                    <li class="room_invite">
-                        <h3 class="room_name"><%= invite.name %></h3>
-                        <button>Accept</button>
-                    </li>
-                <% }) %>
-            </ul>
-        <section>
+        <section id="user_invites">
+            <h2>Your Room Invites</h3>
+            <% if (user.invites == undefined || user.invites.length == 0) { %>
+                <div class="no_invites">It appears you don't have any</div>
+            <% } else { %>
+                <ul>
+                    <% user.invites.forEach(invite => { %>
+                        <li class="room_invite">
+                            <img src="<%= invite.img %>" alt="">
+                            <h3 class="room_name"><%= invite.title %></h3>
+                            <button class="button">Accept</button>
+                        </li>
+                    <% }) %>
+                </ul>
+            <% } %>
+            
+        </section>
 
         <section id="create_room">
             <div class="form-container">
