--- a/src/views/friendlist.ejs
+++ b/src/views/friendlist.ejs
@@ -1,18 +1,28 @@
 <section id="friendlist">
 
-    <!-- Change #page's class between sent_requests/friends/requests to change color -->
+    <!-- Change #page's class between sent_requests/friends/requests/search to 
+        change color and content -->
 
     <section class="friends" id="page">
-        <div id="list">
+
+        <!-- Show searchbar when on the search page -->
+
+        <div id="searchbar" style="display: none;">
+            <form action="">
+                <input type="text" placeholder="Search for users..." name="search">
+                <button type="submit">&#x1F50D;</button>
+              </form>
+        </div>
+
+        <div class="list">
           <ul>
               
-
                 <!-- To add to friendlist, insert element with this structure: 
                 
                 <li class="friend">
                     <section class="shadow" id="info">
-                        <img id="avatar" src="images/user1.png" alt="<%= friend.name %>">
-                        <h1 id="name"><%= friend.name %></h1>
+                        <img id="avatar" src="images/user1.png" alt="<%= /* friend.name */ %>">
+                        <h1 id="name"><%= /* friend.name */ %></h1>
                     </section>
                     <div id="buttons">
                         <button class="button" id="profile">See Profile</button>
