--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,14 +1,38 @@
-<!-- Uncomment (one at a time!) to test different main views-->
-<!-- TODO add dashboard here -->
-
 <section id="friendlist">
 
-    <!-- Change #page's class between sent_requests/friends/requests to change color -->
+    <!-- Change #page's class between sent_requests/friends/requests/search to 
+        change color and content -->
 
     <section class="friends" id="page">
-        <div id="list">
+
+        <!-- Show searchbar when on the search page -->
+
+        <div id="searchbar" style="display: none;">
+            <form action="">
+                <input type="text" placeholder="Search for users..." name="search">
+                <button type="submit">&#x1F50D;</button>
+              </form>
+        </div>
+
+        <div class="list">
           <ul>
-              <% friends.forEach( friend => { %>
+              
+                <!-- To add to friendlist, insert element with this structure: 
+                
+                <li class="friend">
+                    <section class="shadow" id="info">
+                        <img id="avatar" src="images/user1.png" alt="<%= /* friend.name */ %>">
+                        <h1 id="name"><%= /* friend.name */ %></h1>
+                    </section>
+                    <div id="buttons">
+                        <button class="button" id="profile">See Profile</button>
+                        <button class="button" id="message">Message</button>
+                        <button class="button" id="unfriend">Unfriend</button>
+                    </div>
+                </li>
+                
+                -->
+            <% friends.forEach( friend => { %>
                 <li class="friend">
                     <section class="shadow" id="info">
                         <img id="avatar" src="images/user1.png" alt="<%= friend.name %>">
@@ -21,7 +45,7 @@
                     </div>
                 </li>
 
-              <% }); %>
+            <% }); %>
           </ul>
         </div>
         
