Added new logo in header and footer

--- a/src/public/stylesheets/header.css
+++ b/src/public/stylesheets/header.css
@@ -1,6 +1,6 @@
 #header {
     background: rgb(59,84,186);
-background: linear-gradient(90deg, rgba(59,84,186,1) 0%, rgba(154,113,193,1) 100%);
+    background: linear-gradient(90deg, rgba(59,84,186,1) 0%, rgba(154,113,193,1) 100%);
     width: 100%;
     grid-area: header;
     display: flex;
@@ -17,6 +17,12 @@ background: linear-gradient(90deg, rgba(59,84,186,1) 0%, rgba(154,113,193,1) 100
 
 #header #title {
     gap: 15px;
+}
+
+#header #title img {
+    transform: scale(2);
+    filter: invert(72%) sepia(20%) saturate(1853%) hue-rotate(279deg) brightness(87%) contrast(94%);
+    margin-left: 20px;
 }
 
 #header #title h1 {
