--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -1,5 +1,5 @@
 <section id="title">
-    <img id="logo" src="images/sand.jpg" alt="logo">
+    <img id="logo" src="images/logo.svg" alt="logo">
     <h1>S.A.N.D</h1>
 </section>
 
