--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-    <img src="/images/nft.png" alt="s.a.n.d logo"  id='logo'>
+    <img src="/images/logo.svg" alt="s.a.n.d logo"  id='logo'>
     <p class='copyright'>&copy; S.A.N.D Copyright.</p>
     <a href="/terms">Terms And Conditions.</a> 
     <a href="/privacy">Privacy Policy</a>
