--- a/src/public/stylesheets/settings.css
+++ b/src/public/stylesheets/settings.css
@@ -8,7 +8,7 @@
 }
 
 div#settings {
-    background-color: #f0f0f0;
+    background-color: var(--white);
     height: 100%;
     width: 100%;
     min-width: 700px;
