--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -12,4 +12,5 @@
     <link rel='stylesheet' href='/stylesheets/aside.css' />
     <link rel='stylesheet' href='/stylesheets/login_signup.css'  />
     <link rel='stylesheet' href='/stylesheets/rooms.css'  />
+    <link rel='stylesheet' href='/stylesheets/notif_list.css'  />
 </head>
