--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -12,5 +12,8 @@
     <link rel='stylesheet' href='/stylesheets/aside.css' />
     <link rel='stylesheet' href='/stylesheets/login_signup.css'  />
     <link rel='stylesheet' href='/stylesheets/rooms.css'  />
-    <link rel='stylesheet' href='/stylesheets/notif_list.css'  />
+    <link rel='stylesheet' href='/stylesheets/profile.css'  />
+    <link rel='stylesheet' href='stylesheets/settings.css'  />
+    <link rel='stylesheet' href='stylesheets/notif_list.css'  />
+    <link rel='stylesheet' href='stylesheets/single_room.css'  />
 </head>
