Updated the route and single_collection to work with each other

--- a/src/views/includes/aside_closed.ejs
+++ b/src/views/includes/aside_closed.ejs
@@ -1,8 +1,8 @@
 <aside>
 
-    <img class="aside_button" src="/images/open_news.svg">
+    <img class="aside_button" src="/images/news.svg">
 
-    <img class="aside_button" src="/images/chat_button.svg">
+    <img class="aside_button" src="/images/chat.svg">
 
 </aside>
 
