--- a/src/views/single_collection.ejs
+++ b/src/views/single_collection.ejs
@@ -1,7 +1,7 @@
 <section class="single_collection">
 
     <section>
-        <img src="<%= collection.link %>" alt="the image of the collection">
+        <img src="<%= collection.img %>" alt="the image of the collection">
         <button id="track">
             Track
         </button>
@@ -11,7 +11,7 @@
     <section id="collection_info">
         <h1 id="collection_title"><%= collection.title %></h1> 
         <p id="collection_desc"><%= collection.description %></p>
-        <p> Link to OpenSea: <a href="<%= data.OpenSea_link %>" </a> </p>
+        <a href="<%= collection.OpenSea_link %>">  Link to OpenSea: </a>
     </section>
 
     <section id="collection_stats">
@@ -22,9 +22,6 @@
             <h5>Floor Price: <%= collection.floor_price %> </h5>
         </div>
         <div>
-            <h5>Asset Count : <%= collection.asset_count %> </h5>
-        </div>
-        <div>
             <h5>Average Price: <%= collection.average_price %> </h5>
         </div>
         <div>
@@ -32,7 +29,7 @@
         </div>
 
         <div>
-            <h5><%= collection.num_owners %> own at least one.</h5>
+            <h5><%= collection.num_owners %> people own at least one.</h5>
         </div>
 
         <div>
@@ -49,17 +46,5 @@
         
     </section>
 
-    <!-- central part -->
-    <!-- <title> <%= data.title %> </title>
-    <section class="collection_images">
-        <img src="<%= data.img %>" id="collection_img">
-        <img src="<%= data.banner_img %>" id="collection_banner_img">
-    </section>
-
-    <section class="collection_data">
-        <p> Items: <b><%= data.num_assets %></b> </p>
-        <p> Owners: <b><%= data.num_owners %></b> </p>
-        <p> Total volume: <b><%= data.total_volume %></b> </p>
-        <p> Link to OpenSea: <a href="https://opensea.io/collection/<%= data.slug %>"> <%= data.title %> </a> </p>
-    </section> -->
+   
 </section>  
